post status form: styling fixes for content-type selector, align icons with selector

--- a/src/App.scss
+++ b/src/App.scss
@@ -502,6 +502,10 @@ nav {
   .text-format {
     float: right;
   }
+
+  div {
+    padding-top: 5px;
+  }
 }
 
 .visibility-notice {
